--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,20 @@
   pointer-events: none;
 }
 
+button{
+  width: 180px;
+  height: 60px;
+  font-size: 1rem;;
+  letter-spacing: 2px;
+  line-height: 2.5em;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,14 +28,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34;
+  color: white; */
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
